Optimize Code.